--- a/index.html
+++ b/index.html
@@ -22,37 +22,96 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <div>
-            <div class="test grid-1"></div>
-            <div class="test grid-1"></div>
-            <div class="test grid-1"></div>
-            <div class="test grid-1"></div>
-            <div class="test grid-1"></div>
-            <div class="test grid-1"></div>
-        </div>
-        <div>
-            <div class="test grid-2"></div>
-            <div class="test grid-2"></div>
-            <div class="test grid-2"></div>
-        </div>
-        <div>
-            <div class="test grid-3"></div>
-            <div class="test grid-3"></div>
-        </div>
-        <div>
-            <div class="test grid-4"></div>
-            <div class="test grid-2"></div>
-        </div>
-        <div>
-            <div class="test grid-full"></div>
-        </div>
-        <div>
-            <div class="test grid-25"></div>
-            <div class="test grid-25"></div>
-            <div class="test grid-25"></div>
-            <div class="test grid-25"></div>
-        </div>
+        <header role="banner">
+            <div class="header__top">
+                <a href="" class="branding"><img src="" alt=""></a>
+                <div class="header__top--contact">
+                    <p></p>
+                    <a href="" class="button__cta">Get a quote <span>&#62;</span></a>
+                </div>
+            </div>
+            <nav role="navigation">
+                <a href="">Home</a>
+                <a href="">Services</a>
+                <a href="">Industries Served</a>
+                <a href="">Portfolio</a>
+                <a href="">Who We Are</a>
+                <a href="">Why Choose Us</a>
+                <a href="">Safety</a>
+                <a href="">Contact Us</a>
+            </nav>
+        </header>
 
+        <section class="content__hero">
+            <div class="hero">
+                <ul>
+                    <li><img src="" alt=""></li>
+                </ul>
+                <div class="tagline">
+                    <i>We have an eye for</i>
+                    <b>Quality Work</b>
+                </div>
+            </div>
+            <div class="group">
+                <aside class="grid-2">
+                    <h2>Our Services</h2>
+                    <ul>
+                        <li><a href="">Drywall and Shaftwall Systems</a></li>
+                        <li><a href="">Exterior/Interior Steel Stud Framing</a></li>
+                        <li><a href="">Wall and Ceiling Insulation</a></li>
+                        <li><a href="">Acoustical Ceilings and Wall Panels</a></li>
+                        <li><a href="">EIFS - Exterior Insulation Finish System</a></li>
+                    </ul>
+                </aside>
+                <div class="grid-4">
+                    <b>Welcome to</b>
+                    <h1>Paramount Contracting</h1>
+                    <p>We are an experienced, successful commercial contractor located in Lancaster, PA. establishing a reputation for performance under the most demanding schedules.</p>
+                    <p>Paramount Contracting provides services throughout the North Eastern United States including... Pennsylvania, Maryland, New York, Delaware, New Jersey, etc. </p>
+                    <p>Our satisfied customers are the key to our growth, as well as our full array of services that include: exterior &amp; interior metal stud framing, drywall &amp; shaftwall systems, wall &amp; ceiling insulation, installation of doors, frames &amp; hardware, acoustical ceilings &amp; walls, GRG column covers.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content__featured group">
+            <header>
+                <h2>Featured Projects</h2>
+                <i>View our projects to see our capabilities</i>
+                <a href="" class="button">View all projects <span>&#62;</span></a>
+            </header>
+            <div class="group">
+                <div class="featured__project grid-2">
+                    <a href="">
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Eden Resort</h3>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="featured__project grid-2">
+                    <a href="">
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Fairfield Place</h3>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="featured__project grid-2">
+                    <a href="">
+                        <figure>
+                            <img src="" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>LGH-Ann B Barshinger Cancer Center</h3>
+                        </figcaption>
+                    </a>
+                </div>
+            </div>
+        </section>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
