--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
             </div>
         </section>
 
+        <section class="content__certifications">
+            <img src="" alt="">
+        </section>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
