home and service

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <header role="banner" class="header">
-            <div class="header__top">
+        <header role="banner" class="header group">
+            <div class="header__top group">
                 <a href="" class="branding"><img src="img/paramount-contracting.jpg" alt="Paramount Contracting"></a>
                 <div class="header__top--contact">
-                    <p></p>
+                    <p class="phone">717-393-9900</p>
                     <a href="" class="button__cta">Get a quote <span>&#62;</span></a>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             </nav>
         </header>
 
-        <section class="content__hero">
+        <section class="content hero">
             <div class="hero">
                 <ul>
                     <li><img src="img/feature.jpg" alt=""></li>
@@ -75,11 +75,11 @@
             </div>
         </section>
 
-        <section class="content__featured group">
+        <section class="content featured group">
             <header>
                 <h2>Featured Projects</h2>
                 <i>View our projects to see our capabilities</i>
-                <a href="" class="button">View all projects <span>&#62;</span></a>
+                <a href="" class="button__normal">View all projects <span>&#62;</span></a>
             </header>
             <div class="group">
                 <div class="featured__project grid-2 ">
@@ -115,28 +115,28 @@
             </div>
         </section>
 
-        <section class="content__certifications">
-            <img src="" alt="">
-            <p class="certification__leed">LEED <span>Certified</span></p>
-            <p class="certification__eif">EIFSmart <span>Certified</span></p>
+        <section class="content certifications">
+            <img src="img/certifications-bg.jpg" alt="">
+            <p class="certifications__leed"><b>LEED</b> <span>Certified</span></p>
+            <p class="certifications__eif"><b>EIFSmart</b> <span>Certified</span></p>
         </section>
 
-        <section class="content__memberships">
+        <section class="content memberships">
             <header>
                 <h2>Memberships and Awards</h2>
                 <i>Some of our accomplishments</i>
             </header>
             <div class="memberships__awards">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/top-50.jpg" alt="">
+                <img src="img/abc.jpg" alt="">
+                <img src="img/green-advantage.jpg" alt="">
+                <img src="img/awci.jpg" alt="">
             </div>
         </section>
 
-        <footer role="contentinfo">
+        <footer role="contentinfo" class="content footer">
             <nav class="main-nav">
-                <a href="">Home</a>
+                <a href="" class="selected">Home</a>
                 <a href="">Services</a>
                 <a href="">Industries Served</a>
                 <a href="">Portfolio</a>
