--- a/service.html
+++ b/service.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
             <nav role="navigation" class="main-nav">
-                <a href="" class="selected">Home</a>
-                <a href="">Services</a>
+                <a href="">Home</a>
+                <a href="" class="selected">Services</a>
                 <a href="">Industries Served</a>
                 <a href="">Portfolio</a>
                 <a href="">Who We Are</a>
@@ -43,35 +43,21 @@
             </nav>
         </header>
 
-        <section class="content hero">
-            <div class="hero">
-                <ul>
-                    <li><img src="img/feature.jpg" alt=""></li>
-                </ul>
-                <div class="tagline">
-                    <i>We have an eye for</i>
-                    <b>Quality Work</b>
-                </div>
+        <section class="content service group">
+            <div class="service__graphic grid-half no-margin" style="background-image: url(img/drywall.jpg);">
+                <!-- <img src="img/drywall.jpg" alt="Drywall and Shaftwall"> -->
             </div>
-            <div class="group">
-                <aside class="our-services grid-2 no-margin">
-                    <h3>Our Services</h3>
-                    <ul>
-                        <li><a href="">Drywall and Shaftwall Systems</a></li>
-                        <li><a href="">Exterior/Interior Steel Stud Framing</a></li>
-                        <li><a href="">Wall and Ceiling Insulation</a></li>
-                        <li><a href="">Acoustical Ceilings and Wall Panels</a></li>
-                        <li><a href="">EIFS - Exterior Insulation Finish System</a></li>
-                    </ul>
-                </aside>
-                <div class="intro grid-4 grid-flow-opposite">
-                    <b>Welcome to</b>
-                    <h1>Paramount Contracting</h1>
-                    <hr>
-                    <p>We are an experienced, successful commercial contractor located in Lancaster, PA. establishing a reputation for performance under the most demanding schedules.</p>
-                    <p>Paramount Contracting provides services throughout the North Eastern United States including... Pennsylvania, Maryland, New York, Delaware, New Jersey, etc. </p>
-                    <p>Our satisfied customers are the key to our growth, as well as our full array of services that include: exterior &amp; interior metal stud framing, drywall &amp; shaftwall systems, wall &amp; ceiling insulation, installation of doors, frames &amp; hardware, acoustical ceilings &amp; walls, GRG column covers.</p>
-                </div>
+            <div class="service__description grid-half no-margin">
+                <h1>Drywall and Shaftwall Systems</h1>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ante quis nisl laoreet porta eu ut massa. Nulla feugiat vitae lorem nec fringilla. Etiam sit amet venenatis metus. Nam ultricies consequat hendrerit. Pellentesque eleifend eget odio id venenatis. Sed accumsan, ex non luctus sollicitudin, arcu mi semper risus, ut porta nisi erat sed tellus. Vivamus ut lectus in massa rhoncus mollis a vel ex.</p>
+                <ul>
+                    <li>Hanging</li>
+                    <li>Finishing</li>
+                    <li>Fire Rated Wall Assemblies</li>
+                    <li>Patching</li>
+                    <li>Touch-Up</li>
+                </ul>
             </div>
         </section>
 
@@ -112,25 +98,36 @@
                         </figcaption>
                     </a>
                 </div>
-            </div>
-        </section>
-
-        <section class="content certifications">
-            <img src="img/certifications-bg.jpg" alt="">
-            <p class="certifications__leed"><b>LEED</b> <span>Certified</span></p>
-            <p class="certifications__eif"><b>EIFSmart</b> <span>Certified</span></p>
-        </section>
-
-        <section class="content memberships">
-            <header>
-                <h2>Memberships and Awards</h2>
-                <i>Some of our accomplishments</i>
-            </header>
-            <div class="memberships__awards">
-                <img src="img/top-50.jpg" alt="">
-                <img src="img/abc.jpg" alt="">
-                <img src="img/green-advantage.jpg" alt="">
-                <img src="img/awci.jpg" alt="">
+                <div class="featured__project grid-2 ">
+                    <a href="">
+                        <figure>
+                            <img src="img/project.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Eden Resort</h3>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="featured__project grid-2">
+                    <a href="">
+                        <figure>
+                            <img src="img/project.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Fairfield Place</h3>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="featured__project grid-2">
+                    <a href="">
+                        <figure>
+                            <img src="img/project.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>LGH-Ann B Barshinger Cancer Center</h3>
+                        </figcaption>
+                    </a>
+                </div>
             </div>
         </section>
 
