Pages and navigation adjustments
Added several pages and updated the navigation.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav role="navigation" class="main-nav">
                 <a href="" class="selected">Home</a>
                 <a href="">Services</a>
-                <a href="">Industries Served</a>
+                <!-- <a href="">Industries Served</a> -->
                 <a href="">Portfolio</a>
                 <a href="">Who We Are</a>
                 <a href="">Why Choose Us</a>
@@ -145,7 +145,7 @@
                 <a href="">Safety</a>
                 <a href="">Contact Us</a>
             </nav>
-            <p class="copyright">&copy; 2014 Paramount Contracting, Inc. // 219 Witmer Road, Lancaster, OA 17602 // 717-393-9900<br>Designed by WebTek</p>
+            <p class="copyright">&copy; 2014 Paramount Contracting, Inc. // 219 Witmer Road, Lancaster, PA 17602 // 717-393-9900<br>Designed by WebTek</p>
         </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
