--- a/who-we-are.html
+++ b/who-we-are.html
@@ -33,101 +33,49 @@
             </div>
             <nav role="navigation" class="main-nav">
                 <a href="">Home</a>
-                <a href="" class="selected">Services</a>
+                <a href="">Services</a>
                 <!-- <a href="">Industries Served</a> -->
                 <a href="">Portfolio</a>
-                <a href="">Who We Are</a>
+                <a href="" class="selected">Who We Are</a>
                 <a href="">Why Choose Us</a>
                 <a href="">Safety</a>
                 <a href="">Contact Us</a>
             </nav>
         </header>
 
+        <section class="content hero">
+            <div class="hero">
+                <ul>
+                    <li><img src="img/team.jpg" alt=""></li>
+                </ul>
+            </div>
+        </section>
+
         <section class="content service group">
-            <div class="service__graphic grid-half no-margin" style="background-image: url(img/drywall.jpg);">
+            <div class="service__graphic grid-2 no-margin" style="background-image: url(img/drywall.jpg);">
                 <!-- <img src="img/drywall.jpg" alt="Drywall and Shaftwall"> -->
             </div>
-            <div class="service__description grid-half no-margin">
-                <h1>Drywall and Shaftwall Systems</h1>
+            <div class="service__description grid-4 no-margin">
+                <h1>Who we are</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet ante quis nisl laoreet porta eu ut massa. Nulla feugiat vitae lorem nec fringilla. Etiam sit amet venenatis metus. Nam ultricies consequat hendrerit. Pellentesque eleifend eget odio id venenatis. Sed accumsan, ex non luctus sollicitudin, arcu mi semper risus, ut porta nisi erat sed tellus. Vivamus ut lectus in massa rhoncus mollis a vel ex.</p>
-                <ul>
-                    <li>Hanging</li>
-                    <li>Finishing</li>
-                    <li>Fire Rated Wall Assemblies</li>
-                    <li>Patching</li>
-                    <li>Touch-Up</li>
-                </ul>
+                <p>Starting in May of 2005, Paramount Contracting is a young entity with an old soul. Our team, with Jeff Mylin as its founder and leader, is rich with decades of experience, not only in the niche of interior-finishing construction, but with professional relationships. Our success in less than five years is a direct result of knowing what is important and how to execute it.</p>
+
+                <p>Jeff brought his reputation of excellence in the industry as the standard for his new company. Even though the nuts and bolts of what we do is drywall, metal studs and acoustic ceilings, the real goal of Paramount Contracting is to take care of the General Contractor. We are a business-to-business company and our emphasis is on meeting the needs of our clients. For our experienced staff, reading blueprints and putting up the materials is routine, but we recognize that it often takes more than execution of the specifics; we listen, we hear and we do what it takes to make the General Contractors' jobs worry free and their clients more than satisfied.</p> 
+
+                <p>Clean Choice was purchased in January 2008, providing new construction and general office cleaning, including the big jobs - as a complement to the services Paramount Contracting provides. A different company providing different services, but we are all one family in meeting the needs of this industry with the same focus on customer-driven satisfaction.</p>
+
+                <p>The power of our relationship building with our clients is only as strong as the relationships among the Paramount Contracting staff. We are a professional team with the skills and experience to make every job a testament to the vision of continued growth and success, "We are working today for the job tomorrow".</p>
             </div>
         </section>
 
         <section class="content featured group">
             <header>
-            <h2>Drywall Projects</h2>
+                <h2>Featured Projects</h2>
                 <i>View our projects to see our capabilities</i>
                 <a href="" class="button__normal">View all projects <span>&#62;</span></a>
             </header>
             <div class="group">
-                <div class="featured__project grid-2 ">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>Eden Resort</h3>
-                        </figcaption>
-                    </a>
-                </div>
-                <div class="featured__project grid-2">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>Fairfield Place</h3>
-                        </figcaption>
-                    </a>
-                </div>
-                <div class="featured__project grid-2">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>LGH-Ann B Barshinger Cancer Center</h3>
-                        </figcaption>
-                    </a>
-                </div>
-                <div class="featured__project grid-2 ">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>Eden Resort</h3>
-                        </figcaption>
-                    </a>
-                </div>
-                <div class="featured__project grid-2">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>Fairfield Place</h3>
-                        </figcaption>
-                    </a>
-                </div>
-                <div class="featured__project grid-2">
-                    <a href="">
-                        <figure>
-                            <img src="img/project.jpg" alt="">
-                        </figure>
-                        <figcaption>
-                            <h3>LGH-Ann B Barshinger Cancer Center</h3>
-                        </figcaption>
-                    </a>
-                </div>
+                
             </div>
         </section>
 
