--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width">
         
         <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/flexslider.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:400,900,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
 
@@ -43,10 +44,16 @@
             </nav>
         </header>
 
-        <section class="content hero">
-            <div class="hero">
-                <ul>
+        <section class="content hero slider">
+            <div class="hero flexslider">
+                <ul class="slides">
                     <li><img src="img/feature.jpg" alt=""></li>
+                    <li><img src="img/feature-2.jpg" alt=""></li>
+                    <li><img src="img/feature-3.jpg" alt=""></li>
+                    <li><img src="img/feature-4.jpg" alt=""></li>
+                    <li><img src="img/feature-5.jpg" alt=""></li>
+                    <!-- <li><img src="img/feature-6.jpg" alt=""></li> -->
+                    <li><img src="img/feature-7.jpg" alt=""></li>
                 </ul>
                 <div class="tagline">
                     <i>We have an eye for</i>
@@ -138,7 +145,7 @@
             <nav class="main-nav">
                 <a href="" class="selected">Home</a>
                 <a href="">Services</a>
-                <a href="">Industries Served</a>
+                <!-- <a href="">Industries Served</a> -->
                 <a href="">Portfolio</a>
                 <a href="">Who We Are</a>
                 <a href="">Why Choose Us</a>
@@ -150,6 +157,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery.flexslider-min.js"></script>
 
         <script src="js/main.js"></script>
     </body>
