--- a/portfolio.html
+++ b/portfolio.html
@@ -215,10 +215,10 @@
 
         <footer role="contentinfo" class="content footer">
             <nav class="main-nav">
-                <a href="" class="selected">Home</a>
+                <a href="">Home</a>
                 <a href="">Services</a>
-                <a href="">Industries Served</a>
-                <a href="">Portfolio</a>
+                <!-- <a href="">Industries Served</a> -->
+                <a href="" class="selected">Portfolio</a>
                 <a href="">Who We Are</a>
                 <a href="">Why Choose Us</a>
                 <a href="">Safety</a>
