--- a/service.html
+++ b/service.html
@@ -133,9 +133,9 @@
 
         <footer role="contentinfo" class="content footer">
             <nav class="main-nav">
-                <a href="" class="selected">Home</a>
-                <a href="">Services</a>
-                <a href="">Industries Served</a>
+                <a href="">Home</a>
+                <a href="" class="selected">Services</a>
+                <!-- <a href="">Industries Served</a> -->
                 <a href="">Portfolio</a>
                 <a href="">Who We Are</a>
                 <a href="">Why Choose Us</a>
