--- a/who-we-are.html
+++ b/who-we-are.html
@@ -81,11 +81,11 @@
 
         <footer role="contentinfo" class="content footer">
             <nav class="main-nav">
-                <a href="" class="selected">Home</a>
+                <a href="">Home</a>
                 <a href="">Services</a>
-                <a href="">Industries Served</a>
+                <!-- <a href="">Industries Served</a> -->
                 <a href="">Portfolio</a>
-                <a href="">Who We Are</a>
+                <a href="" class="selected">Who We Are</a>
                 <a href="">Why Choose Us</a>
                 <a href="">Safety</a>
                 <a href="">Contact Us</a>
