--- a/who-we-are.html
+++ b/who-we-are.html
@@ -51,11 +51,17 @@
             </div>
         </section>
 
-        <section class="content service group">
-            <div class="service__graphic grid-2 no-margin" style="background-image: url(img/drywall.jpg);">
-                <!-- <img src="img/drywall.jpg" alt="Drywall and Shaftwall"> -->
-            </div>
-            <div class="service__description grid-4 no-margin">
+        <section class="content about group">
+            <aside class="history grid-2">
+                <h3>History</h3>
+                <ul>
+                    <li><b>2005</b> <i>- Paramount Contracting established.</i></li>
+                    <li><b>2008</b> <i>- Paramount Contracting purchased Clean Choice in January to compliment contracting services.</i></li>
+                    <li><b>2012</b> <i>- Top 50 Fastest Growing Companies 2012</i></li>
+                    <li><b>2014</b> <i>- Top 50 Fastest Growing Companies 2014</i></li>
+                </ul>
+            </aside>
+            <div class="content__description grid-4">
                 <h1>Who we are</h1>
                 <hr>
                 <p>Starting in May of 2005, Paramount Contracting is a young entity with an old soul. Our team, with Jeff Mylin as its founder and leader, is rich with decades of experience, not only in the niche of interior-finishing construction, but with professional relationships. Our success in less than five years is a direct result of knowing what is important and how to execute it.</p>
@@ -66,16 +72,93 @@
 
                 <p>The power of our relationship building with our clients is only as strong as the relationships among the Paramount Contracting staff. We are a professional team with the skills and experience to make every job a testament to the vision of continued growth and success, "We are working today for the job tomorrow".</p>
             </div>
+
         </section>
 
-        <section class="content featured group">
+        <section class="content  group">
             <header>
-                <h2>Featured Projects</h2>
+                <h2>Management Team</h2>
                 <i>View our projects to see our capabilities</i>
-                <a href="" class="button__normal">View all projects <span>&#62;</span></a>
             </header>
-            <div class="group">
-                
+            <div class="management grid-full no-margin group">
+                <!-- <img src="img/team.jpg" alt="Drywall and Shaftwall"> -->
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/jeff-mylin.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Jeff Mylin</h3>
+                            <i>President</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/tim-eckman.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Tim Eckman</h3>
+                            <i>Senior Estimator</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/jamie-philpot.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Jamie Philpot</h3>
+                            <i>Operations Manager</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/kurt-loudenslager.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Kurt Loudenslager</h3>
+                            <i>Senior Project Manager and Safety Director</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/jon-christman.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Jon Christman</h3>
+                            <i>Project Manager</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/brian-zuschmidt.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Brian Zuschmidt</h3>
+                            <i>Project Manager/Estimator</i>
+                        </figcaption>
+                    </a>
+                </div>
+                <div class="management__member grid-25">
+                    <a href="">
+                        <figure>
+                            <img src="img/jim-wolpert.jpg" alt="">
+                        </figure>
+                        <figcaption>
+                            <h3>Jim Wolpert</h3>
+                            <i>Vice President/CFO</i>
+                        </figcaption>
+                    </a>
+                </div>
             </div>
         </section>
 
