--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </header>
 
         <section class="content hero slider">
-            <div class="hero flexslider">
+            <div class="hero__graphic flexslider">
                 <ul class="slides">
                     <li><img src="img/feature.jpg" alt=""></li>
                     <li><img src="img/feature-2.jpg" alt=""></li>
