--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,18 @@
         </section> -->
 
         <section class="content about group">
-            <div class="content__description about__description grid-4 grid-flow-opposite">
-                <h1>Who we are</h1>
+            <aside class="history grid-2">
+                <h3>Our History</h3>
+                <ul>
+                    <li><b>2005</b> <i>- Paramount Contracting established.</i></li>
+                    <li><b>2008</b> <i>- Paramount Contracting purchased Clean Choice in January to compliment contracting services.</i></li>
+                    <li><b>2012</b> <i>- Top 50 Fastest Growing Companies 2012</i></li>
+                    <li><b>2014</b> <i>- Top 50 Fastest Growing Companies 2014</i></li>
+                </ul>
+            </aside>
+
+            <div class="content__description about__description grid-4">
+                <h1>Contact Us</h1>
                 <hr>
                 <p>Starting in May of 2005, Paramount Contracting is a young entity with an old soul. Our team, with Jeff Mylin as its founder and leader, is rich with decades of experience, not only in the niche of interior-finishing construction, but with professional relationships. Our success in less than five years is a direct result of knowing what is important and how to execute it.</p>
 
@@ -64,15 +74,7 @@
                 <p>The power of our relationship building with our clients is only as strong as the relationships among the Paramount Contracting staff. We are a professional team with the skills and experience to make every job a testament to the vision of continued growth and success, "We are working today for the job tomorrow".</p>
             </div>
             
-            <aside class="history grid-2">
-                <h3>Our History</h3>
-                <ul>
-                    <li><b>2005</b> <i>- Paramount Contracting established.</i></li>
-                    <li><b>2008</b> <i>- Paramount Contracting purchased Clean Choice in January to compliment contracting services.</i></li>
-                    <li><b>2012</b> <i>- Top 50 Fastest Growing Companies 2012</i></li>
-                    <li><b>2014</b> <i>- Top 50 Fastest Growing Companies 2014</i></li>
-                </ul>
-            </aside>
+            
         </section>
 
         <section class="content  group">
